@@ -1,5 +1,7 @@
 === master
 
+* Cache Dataset#qualify datasets if no argument is given (jeremyevans)
+
 * Cache Dataset#lateral datasets (jeremyevans)
 
 * Cache Dataset#from_self datasets if no options are given (jeremyevans)
